--- a/css/style.css
+++ b/css/style.css
@@ -9,4 +9,133 @@
   background-image: url("../images/bg_login.jpg");
   background-repeat: repeat-y;
   background-size: 100% auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+
+.md-form input[type="date"],
+.md-form input[type="datetime-local"],
+.md-form input[type="email"],
+.md-form input[type="number"],
+.md-form input[type="password"],
+.md-form input[type="search-md"],
+.md-form input[type="search"],
+.md-form input[type="tel"],
+.md-form input[type="text"],
+.md-form input[type="time"],
+.md-form input[type="url"],
+.md-form textarea.md-textarea {
+  border-bottom: 1px solid #333333;
+}
+
+.md-form label {
+  color: #751dfb;
+  font-weight: 500 !important;
+}
+.form-check {
+  padding-left: 0;
+}
+[type="checkbox"]:checked,
+[type="checkbox"]:not(:checked) {
+  position: absolute;
+  opacity: 0;
+  pointer-events: none;
+}
+.form-check-input {
+  position: absolute;
+  margin-top: 0.3rem;
+  margin-left: -1.25rem;
+}
+.form-check-input[type="checkbox"] + label,
+label.btn input[type="checkbox"] + label {
+  position: relative;
+  padding-left: 30px;
+  cursor: pointer;
+  display: inline-block;
+  height: 1.5625rem;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.form-check-input[type="checkbox"] + label:before,
+.form-check-input[type="checkbox"]:not(.filled-in) + label:after,
+label.btn input[type="checkbox"] + label:before,
+label.btn input[type="checkbox"]:not(.filled-in) + label:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 18px;
+  height: 18px;
+  z-index: 0;
+  border: 2px solid #751dfb;
+  border-radius: 1px;
+  margin-top: 3px;
+  transition: 0.2s;
+}
+.form-check-input[type="checkbox"]:not(.filled-in) + label:after,
+label.btn input[type="checkbox"]:not(.filled-in) + label:after {
+  border: 0;
+  transform: scale(0);
+}
+.form-check-input[type="checkbox"]:checked + label:before,
+label.btn input[type="checkbox"]:checked + label:before {
+  top: -4px;
+  left: -5px;
+  width: 12px;
+  height: 1.375rem;
+  border-top: 2px solid transparent;
+  border-left: 2px solid transparent;
+  border-right: 2px solid #751dfb;
+  border-bottom: 2px solid #751dfb;
+  transform: rotate(40deg);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  transform-origin: 100% 100%;
+}
+.form-check-input[type="checkbox"]:checked + label{
+  color: #751dfb;
+}
+
+.form-check-label {
+  font-weight: 500;
+  color: #333333;
+}
+.text-forgotpass {
+  color: #333333;
+  font-weight: 500;
+  text-decoration: underline;
+}
+.text-forgotpass:hover {
+  color: #751dfb;
+}
+
+.btn-login{
+  background-color: #751dfb;
+  border-radius: 4px;
+  font-size: 1rem;
+  font-weight: 400;
+  color: #ffffff;
+}
+.btn-login:hover{
+  background-color: #954eff;
+  color: #ffffff;
+}
+.btn-register{
+  background-color: #29e0c2;
+  border-radius: 4px;
+  font-size: 1rem;
+  font-weight: 400;
+  color: #ffffff;
+}
+.btn-register:hover{
+  background-color: #29e0c2;
+  color: #333333;
+}
+.card-body-login{
+  padding: 3rem;
 }
